Closed Bug 643241 Opened 15 years ago Closed 15 years ago

TI: "Assertion failure: getType()->hasSpecialEquality,"

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

Attachments

(1 file)

*/ function (){} asserts js debug shell on JM changeset 5ce2f7a90286 with -m at Assertion failure: getType()->hasSpecialEquality,
The TypeObject->hasSpecialEquality bit is not maintained if inference is disabled, this always sets it to true in such cases. http://hg.mozilla.org/projects/jaegermonkey/rev/6ca659590941
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: