[INFER] Don't manage hasSpecialEquality if inference is disabled, bug 643241.